Fix incorrect CSS property for visibility

--- a/src/components/image.module.css
+++ b/src/components/image.module.css
@@ -1,5 +1,5 @@
 .image {
-  visibility: show;
+  visibility: visible;
   animation: fadein 0.7s ease-out;
 }
 
